--- a/pages/20058.html
+++ b/pages/20058.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Functorial Semantics of Algebraic Theories in nLab
+      Filippo Bonchi in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Functorial Semantics of Algebraic Theories
+      Filippo Bonchi
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9464/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9465/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,59 +311,31 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<p>This page is about <a class="existingWikiWord" href="/nlab/show/William+Lawvere">William Lawvere</a>‘s Ph.D. thesis:</p>
-
 <ul>
-<li>F. W. Lawvere, <em>Functorial Semantics of Algebraic Theories</em>, Ph.D. thesis, Columbia University, 1963.</li>
+<li><a href="https://dblp.org/pers/hd/b/Bonchi:Filippo">publications</a></li>
 </ul>
-
-<p>Written under <a class="existingWikiWord" href="/nlab/show/S.+Eilenberg">S. Eilenberg</a> and highly influential, the dissertation was not published at the time, and only two short notices appeared:</p>
-
-<ul>
-<li>
-<p>F. W. Lawvere, <em>Functorial Semantics of Algebraic Theories</em>, Proc.Nat.Acad.Sci. <strong>50</strong> (1963) pp.869–872. (<a href="http://www.pnas.org/content/50/5/869.full.pdf">pdf</a>)</p>
-</li>
-
-<li>
-<p>F. W. Lawvere, <em>Algebraic theories, algebraic categories, and algebraic functors</em>, pp.413–418 in Addison, Henkin, Tarski (eds.), <em>The Theory of Models</em>, North-Holland Amsterdam 1965.</p>
-</li>
-</ul>
-
-<p>It got finally published together with an author’s comment and a supplement in:</p>
-
-<ul>
-<li>Reprints in Theory and Applications of Categories, No. 5 (2004) pp 1–121 (<a href="http://www.tac.mta.ca/tac/reprints/articles/5/tr5abs.html">tac</a>).</li>
-</ul>
-
-<p>In the thesis, Lawvere introduces <a class="existingWikiWord" href="/nlab/show/Lawvere+theories">Lawvere theories</a> and the <a class="existingWikiWord" href="/nlab/show/categorical+semantics">functorial perspective</a> into model theory. He takes steps towards axiomatizing <a class="existingWikiWord" href="/nlab/show/ETCC">the category of categories as a foundation for mathematics</a>. This includes introducing the notion of <a class="existingWikiWord" href="/nlab/show/comma+category">comma category</a> as an auxiliary to a definition of <a class="existingWikiWord" href="/nlab/show/adjoint+functors">adjunction</a> implicitly involving an isomorphism of <a class="existingWikiWord" href="/nlab/show/2-sided+discrete+fibrations">2-sided discrete fibrations</a> (cf. Lawvere 2004 pp.12–13).</p>
-
-<p>For a generalization to relational theories see</p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/Filippo+Bonchi">Filippo Bonchi</a>, <a class="existingWikiWord" href="/nlab/show/Dusko+Pavlovic">Dusko Pavlovic</a>, <a class="existingWikiWord" href="/nlab/show/Pawel+Sobocinski">Pawel Sobocinski</a>, <em>Functorial Semantics for Relational Theories</em>, (<a href="https://arxiv.org/abs/1711.08699">arXiv:1711.08699</a>)</li>
-</ul>
-<div class="property">category: <a class="category_link" href="/nlab/all_pages/reference">reference</a></div></body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on January 16, 2019 at 04:47:35.
-  See the <a href="https://ncatlab.org/nlab/history/Functorial Semantics of Algebraic Theories" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on January 16, 2019 at 04:52:00.
+  See the <a href="https://ncatlab.org/nlab/history/Filippo Bonchi" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Functorial+Semantics+of+Algebraic+Theories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Functorial+Semantics+of+Algebraic+Theories/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Functorial+Semantics+of+Algebraic+Theories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Functorial+Semantics+of+Algebraic+Theories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Functorial Semantics of Algebraic Theories/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Filippo+Bonchi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Filippo Bonchi/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Functorial+Semantics+of+Algebraic+Theories" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Filippo+Bonchi" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Functorial+Semantics+of+Algebraic+Theories" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Filippo+Bonchi" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Functorial+Semantics+of+Algebraic+Theories" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Filippo+Bonchi" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
