--- a/pages/7605.html
+++ b/pages/7605.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5285/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5285/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -570,6 +570,10 @@ margin-left: 0em;
 <li>
 <p>Another (counter-)example to keep in mind, however, is the <a class="existingWikiWord" href="/nlab/show/canonical+model+structure+on+groupoids">canonical model structure on groupoids</a>, which is combinatorial and simplicial, all objects are fibrant and cofibrant, pullback along fibrations has a right adjoint, cofcibrations are closed under limits, and all monomorphisms are cofibrations; but the category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Gpd</mi></mrow><annotation encoding="application/x-tex">Gpd</annotation></semantics></math> is not locally cartesian closed (hence not a Grothendieck topos), and not every cofibration is a monomorphism.</p>
 </li>
+
+<li>
+<p>The <a class="existingWikiWord" href="/nlab/show/type+theoretic+model+structure">type theoretic model structure</a> on the presheaves on a small category with an <a class="existingWikiWord" href="/nlab/show/atomic+object">atomic</a> <a class="existingWikiWord" href="/nlab/show/interval+object">interval object</a>. This gives examples on various type of cartesian <a class="existingWikiWord" href="/nlab/show/cubical+sets">cubical sets</a>.</p>
+</li>
 </ul>
 
 <h2 id="properties">Properties</h2>
@@ -653,14 +657,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 14, 2019 at 14:33:23.
+  Last revised on January 16, 2019 at 06:43:11.
   See the <a href="https://ncatlab.org/nlab/history/type-theoretic model category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/type-theoretic+model+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/type-theoretic+model+category/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/type-theoretic+model+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/type-theoretic+model+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/type-theoretic+model+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/type-theoretic+model+category/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/type-theoretic+model+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/type-theoretic+model+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/type-theoretic model category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
