--- a/pages/20058.html
+++ b/pages/20058.html
@@ -311,7 +311,7 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<p>Filippo Bonchi is an Asociate Professor in the Department of Computer Science of the University of Pisa.</p>
+<p>Filippo Bonchi is an Associate Professor in the Department of Computer Science of the University of Pisa.</p>
 
 <ul>
 <li><a href="https://dblp.org/pers/hd/b/Bonchi:Filippo">publications</a></li>
@@ -322,14 +322,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 16, 2019 at 07:47:07.
+  Last revised on January 16, 2019 at 09:34:07.
   See the <a href="https://ncatlab.org/nlab/history/Filippo Bonchi" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Filippo+Bonchi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Filippo+Bonchi/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Filippo+Bonchi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Filippo+Bonchi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Filippo+Bonchi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Filippo+Bonchi/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Filippo+Bonchi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Filippo+Bonchi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Filippo Bonchi/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
