--- a/pages/19874.html
+++ b/pages/19874.html
@@ -522,7 +522,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p><em>Leptoquarks</em> is the name given to hypothetical <a class="existingWikiWord" href="/nlab/show/fundamental+particles">fundamental particles</a> which combine the properties of both <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> and <a class="existingWikiWord" href="/nlab/show/leptons">leptons</a> in the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a>.</p>
+<p><em>Leptoquarks</em> is the name given to hypothetical <a class="existingWikiWord" href="/nlab/show/fundamental+particles">fundamental particles</a> which combine the properties of both <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> and <a class="existingWikiWord" href="/nlab/show/leptons">leptons</a> from the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a>.</p>
 
 <h2 id="properties">Properties</h2>
 
@@ -637,14 +637,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 16, 2019 at 10:55:45.
+  Last revised on January 16, 2019 at 11:42:09.
   See the <a href="https://ncatlab.org/nlab/history/leptoquark" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/leptoquark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/leptoquark/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/leptoquark" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/leptoquark" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/leptoquark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/leptoquark/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/leptoquark" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/leptoquark" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/leptoquark/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
